Revision history for Perl extension {{$dist->name}}

{{$NEXT}}

1.101420  2010-05-22 17:05:12 Europe/Vienna
    - removed weaver.ini since that's handled in Dist::Zilla's [@MARCEL] now
    - removed unused variable

1.100701  2010-03-11 23:47:35 Europe/Vienna
    - it's not an "online" documentation (thanks avar)

1.100700  2010-03-11 14:35:45 Europe/Vienna
    - original version