@@ -1,6 +1,8 @@
 Revision history for Perl extension {{$dist->name}}
 
 {{$NEXT}}
+    - added support Module::Build
+    - note cpanm as preferred installation method
 
 1.101420  2010-05-22 17:05:12 Europe/Vienna
     - removed weaver.ini since that's handled in Dist::Zilla's [@MARCEL] now
